k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-generator
  labels:
    name: code-generator
